[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/ron/run_bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/ron_enemy.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="Animation" id=2]
resource_name = "cycle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ron_enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}

[node name="run_bullet" type="Area2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="ron_enemy" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 8
hframes = 8
frame = 13
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cycle"
anims/cycle = SubResource( 2 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_on_run_bullet_area_entered" flags=3]
[connection signal="body_entered" from="." to="." method="_on_run_bullet_body_entered" flags=3]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
